--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Technical Documentation Page</title>
-    <link rel="stylesheet" href="example4.css"
+    <link rel="stylesheet" href="documentationpage.css"
   </head>
 
   <body>
